Refactoring and Google Checkstyle