@@ -1,16 +1,22 @@
 package org.example.chaosgame.model.chaos;
 
-import org.example.chaosgame.model.linalg.Matrix2x2;
-import org.example.chaosgame.model.linalg.Vector2D;
-import org.example.chaosgame.model.transformations.Transform2D;
-import org.example.chaosgame.model.transformations.AffineTransform2D;
-import org.junit.jupiter.api.*;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Vector;
-
-import static org.junit.jupiter.api.Assertions.*;
+import org.example.chaosgame.model.linalg.Matrix2x2;
+import org.example.chaosgame.model.linalg.Vector2D;
+import org.example.chaosgame.model.transformations.AffineTransform2D;
+import org.example.chaosgame.model.transformations.Transform2D;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 
 class ChaosGameDescriptionTest {
   private ChaosGameDescription chaosGameDescription;
@@ -32,9 +38,11 @@ class ChaosGameDescriptionTest {
     vectorPartA = new Vector2D(0.0, 0.0);
     matrixB = new Matrix2x2(0.5, 0.0, 0.0, 0.5);
     vectorPartB = new Vector2D(0.25, 0.50);
-    transforms = Arrays.asList(new AffineTransform2D(matrixA, vectorPartA), new AffineTransform2D(matrixB, vectorPartB));
+    transforms = Arrays.asList(new AffineTransform2D(matrixA, vectorPartA),
+            new AffineTransform2D(matrixB, vectorPartB));
     probabilities = Arrays.asList(50, 50);
-    chaosGameDescription = new ChaosGameDescription(minCoords, maxCoords, transforms, probabilities);
+    chaosGameDescription = new ChaosGameDescription(
+            minCoords, maxCoords, transforms, probabilities);
   }
 
   @AfterEach
@@ -78,7 +86,8 @@ class ChaosGameDescriptionTest {
     @Test
     @DisplayName("Set empty transforms")
     void testSetEmptyTransforms() {
-      assertThrows(IllegalArgumentException.class, () -> chaosGameDescription.setTransforms(List.of()));
+      assertThrows(IllegalArgumentException.class,
+              () -> chaosGameDescription.setTransforms(List.of()));
     }
 
     @Test
@@ -91,7 +100,8 @@ class ChaosGameDescriptionTest {
               new AffineTransform2D(matrixB, vectorPartB),
               new AffineTransform2D(matrixA, vectorPartA)
       );
-      assertThrows(IllegalArgumentException.class, () -> chaosGameDescription.setTransforms(tooManyTransforms));
+      assertThrows(IllegalArgumentException.class,
+              () -> chaosGameDescription.setTransforms(tooManyTransforms));
     }
 
     @Test
@@ -99,7 +109,7 @@ class ChaosGameDescriptionTest {
     void testSetValidTransforms() {
       Matrix2x2 newMatrix = new Matrix2x2(9.9, 9.9, 9.9, 9.9);
       Vector2D newVector = new Vector2D(9.9, 9.9);
-      List<Transform2D> newTransforms = Arrays.asList(new AffineTransform2D(newMatrix, newVector));
+      List<Transform2D> newTransforms = List.of(new AffineTransform2D(newMatrix, newVector));
       chaosGameDescription.setTransforms(newTransforms);
       assertEquals(newTransforms, chaosGameDescription.getTransforms());
     }
@@ -129,25 +139,36 @@ class ChaosGameDescriptionTest {
     void testSetMinAndMaxCoords() {
       Vector2D newMinCoords = new Vector2D(-99, -99);
 
-      assertThrows(IllegalArgumentException.class, () -> new ChaosGameDescription(newMinCoords, maxCoords, transforms, probabilities));
-      assertThrows(IllegalArgumentException.class, () -> new ChaosGameDescription(maxCoords, minCoords, transforms, probabilities));
-      assertThrows(IllegalArgumentException.class, () -> new ChaosGameDescription(minCoords, minCoords, transforms, probabilities));
+      assertThrows(IllegalArgumentException.class,
+              () -> new ChaosGameDescription(newMinCoords, maxCoords, transforms, probabilities));
+      assertThrows(IllegalArgumentException.class,
+              () -> new ChaosGameDescription(maxCoords, minCoords, transforms, probabilities));
+      assertThrows(IllegalArgumentException.class,
+              () -> new ChaosGameDescription(minCoords, minCoords, transforms, probabilities));
     }
   }
 
   @Test
   void testEquals() {
-    ChaosGameDescription sameChaosGameDescription = new ChaosGameDescription(minCoords, maxCoords, transforms, probabilities);
+    ChaosGameDescription sameChaosGameDescription =
+            new ChaosGameDescription(minCoords, maxCoords, transforms, probabilities);
     assertEquals(chaosGameDescription, sameChaosGameDescription);
     assertNotNull(chaosGameDescription);
     assertNotEquals(chaosGameDescription, new Object());
-    ChaosGameDescription differentChaosGameDescription = new ChaosGameDescription(new Vector2D(1, 1), new Vector2D(2, 2), transforms, probabilities);
+    ChaosGameDescription differentChaosGameDescription =
+            new ChaosGameDescription(
+                    new Vector2D(1, 1),
+                    new Vector2D(2, 2),
+                    transforms, probabilities);
     assertNotEquals(chaosGameDescription, differentChaosGameDescription);
   }
 
   @Test
   void testHashCode() {
-    ChaosGameDescription sameChaosGameDescription = new ChaosGameDescription(minCoords, maxCoords, transforms, probabilities);
+    ChaosGameDescription sameChaosGameDescription
+            = new ChaosGameDescription(
+                    minCoords, maxCoords,
+            transforms, probabilities);
     assertEquals(chaosGameDescription.hashCode(), sameChaosGameDescription.hashCode());
   }
 }
